--- a/index.css
+++ b/index.css
@@ -3,7 +3,8 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: rgb(32, 32, 32);
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 #board {
@@ -86,7 +87,7 @@ h1 {
 
 #game-over-area {
   text-align: center;
-  border: indigo 8px solid;
+  border: #F7A105 8px solid;
   padding: 50px;
   width: 50%;
   margin-top: 50px;
@@ -99,8 +100,9 @@ h2 {
 }
 
 button {
-  background-color: transparent;
-  color: currentColor;
+  background-color: white;
+  color: black;
+  font-weight: bold;
   border: currentColor 1px solid;
   padding: 10px;
   font-size: 1.5em;
